<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.ttcbeuren.ttcbeurenhauptapp.MainActivityStartseite" >

    <item
        android:id="@+id/action_example"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_refresh"/>
   <!--   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>-->
    <item
        android:id="@+id/menu_account"
        android:title="@string/text_account">
    </item>
    <group android:id="@+id/menugroup_erstellen">
        <item android:id="@+id/menu_erstellen_top" android:title="@string/text_erstellen">
            <menu>
                <item android:id="@+id/menu_spiel_erstellen" android:title="@string/text_spielerstellen"/>
               <item android:id="@+id/menu_erstellen_newsfeed" android:title="@string/text_neuerNewsfeed"/>
            </menu>
        </item>
    </group>

</menu>