<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.ttcbeuren.ttcbeurenhauptapp.Activitypopup" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@android:color/background_light"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sindsiesicher"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linear_fragment_ergebnisse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/txt_ja"
                android:textColor="@android:color/holo_blue_light"
                android:textColorHint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn_dismiss"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/text_nein"
                android:textColor="@android:color/holo_blue_light"
                android:textColorHint="@android:color/holo_blue_light" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
